--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,12 +16,18 @@ dependencies:
   elementary: ^2.0.0
   provider: ^6.0.5
   firebase_auth: ^4.2.9
+  freezed_annotation: ^2.2.0
+  json_annotation: ^4.8.0
+  firebase_core: ^2.7.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.3
+  freezed: ^2.3.2
+  json_serializable: ^6.6.1
 
 flutter:
 
