--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.0
   firebase_core: ^2.7.0
+  firebase_crashlytics: ^3.0.15
+  logger: ^1.1.0
 
 dev_dependencies:
   flutter_test:
