--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,18 @@ dependencies:
   cupertino_icons: ^1.0.2
   elementary: ^2.0.0
   provider: ^6.0.5
-  firebase_auth: ^4.2.9
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.0
+  logger: ^1.1.0
+  firebase_auth: ^4.2.9
   firebase_core: ^2.7.0
   firebase_crashlytics: ^3.0.15
-  logger: ^1.1.0
+  firebase_performance: ^0.9.0+14
+  flutter_localizations:
+    sdk: flutter
+  intl: any
+  auto_route: ^5.0.4
+  flutter_svg: ^2.0.2
 
 dev_dependencies:
   flutter_test:
@@ -30,7 +36,10 @@ dev_dependencies:
   build_runner: ^2.3.3
   freezed: ^2.3.2
   json_serializable: ^6.6.1
+  auto_route_generator: ^5.0.3
 
 flutter:
-
+  generate: true
   uses-material-design: true
+  assets:
+    - assets/
